--- a/client-ui/src/styles.less
+++ b/client-ui/src/styles.less
@@ -20,10 +20,13 @@
 
 html, body {
     width:100%;
+    max-width: 100%;
     height: 100%;
     font-size: 0.5vw;
     font-family: "Roboto", "Trebuchet MS", Arial, Helvetica, sans-serif;
     color:#555;
+    margin-left: 0 !important;
+    margin-right: 0 !important; 
 }
 
 .cxtmenu-disabled{
@@ -121,4 +124,50 @@ table.noheader thead{
   -ms-transform:     rotate(90deg);
   -o-transform:      rotate(90deg);
   transform:         rotate(90deg);
+}
+
+.custom-slider .ng5-slider .ng5-slider-bar {
+  background: #ffe4d1;
+  height: 15px;
+  cursor: pointer;
+}
+.custom-slider .ng5-slider .ng5-slider-selection {
+  background: #e39255;
+}
+.custom-slider .ng5-slider .ng5-slider-pointer {
+  width: 8px;
+  height: 15px;
+  top: auto;
+  background-color: #303A40;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+.custom-slider .ng5-slider .ng5-slider-pointer:after {
+  display: none;
+}
+.custom-slider .ng5-slider .ng5-slider-bubble {
+  bottom: 14px;
+}
+.custom-slider .ng5-slider .ng5-slider-limit {
+  font-weight: bold;
+  color: #e39255;
+}
+.custom-slider .ng5-slider .ng5-slider-tick {
+  width: 1px;
+  height: 17px;
+  margin-left: 4px;
+  border-radius: 0;
+  top: 1px;
+  background:#e39255;
+}
+ .custom-slider .ng5-slider .ng5-slider-tick.ng5-slider-selected {
+    background: #303A40;
+}
+
+.bs-timepicker-field {
+    width: 60px !important;
+}
+input.form-control, .btn-default{
+  border: 1px solid #e39255;;
+  border-radius: 4px;
 }
