--- a/client-ui/src/app/components/dashboard/dashboard.component.less
+++ b/client-ui/src/app/components/dashboard/dashboard.component.less
@@ -13,14 +13,81 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 22%;
-    overflow-x: hidden;
+
+.custom-slider .ng5-slider .ng5-slider-bar {
+  background: #ffe4d1;
+  height: 15px;
+  cursor: pointer;
+}
+.custom-slider .ng5-slider .ng5-slider-selection {
+  background: #e39255;
+}
+.custom-slider .ng5-slider .ng5-slider-pointer {
+  width: 8px;
+  height: 15px;
+  top: auto;
+  background-color: #303A40;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+.custom-slider .ng5-slider .ng5-slider-pointer:after {
+  display: none;
+}
+.custom-slider .ng5-slider .ng5-slider-bubble {
+  bottom: 14px;
+}
+.custom-slider .ng5-slider .ng5-slider-limit {
+  font-weight: bold;
+  color: #e39255;
+}
+.custom-slider .ng5-slider .ng5-slider-tick {
+  width: 1px;
+  height: 17px;
+  margin-left: 4px;
+  border-radius: 0;
+  top: 1px;
+  background:#e39255;
+}
+ .custom-slider .ng5-slider .ng5-slider-tick.ng5-slider-selected {
+    background: #303A40;
+}
+
+.bs-timepicker-field {
+    width: 60px !important;
+}
+input.form-control, .btn-default{
+  border: 1px solid #e39255;;
+  border-radius: 4px;
+}
+
+input.search {
+    padding:8px;
+    margin:15px auto;
+    width:20%;
+    font-size: 14px;
+    display: block;
+    background: transparent;
+    border: none;
+    border-bottom: 3px solid #e39255;
+}
+
+input.search:focus {
+  outline: none;
+}
+
+.footer {
+   position: fixed;
+  left: 0;
+  bottom: 5%;
+  width: 100%;
+  text-align: center;
 }
 
 hr{
     background-color: #e39255;
+    height: 2px;
+}
+
+.padding4{
+    padding-top: 4%
 }
