--- a/client-ui/src/styles.less
+++ b/client-ui/src/styles.less
@@ -17,6 +17,9 @@
 @import "../node_modules/font-awesome/less/font-awesome.less";
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/cytoscape-panzoom/cytoscape.js-panzoom.css";
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
 
 html, body {
     width:100%;
@@ -94,7 +97,7 @@ table.noheader thead{
     display:none;
 }
 
- .collapsible{
+.collapsible{
     position: relative;
     font-weight: bold;
     color:#e39255;
@@ -126,48 +129,36 @@ table.noheader thead{
   transform:         rotate(90deg);
 }
 
-.custom-slider .ng5-slider .ng5-slider-bar {
-  background: #ffe4d1;
-  height: 15px;
-  cursor: pointer;
-}
-.custom-slider .ng5-slider .ng5-slider-selection {
-  background: #e39255;
-}
-.custom-slider .ng5-slider .ng5-slider-pointer {
-  width: 8px;
-  height: 15px;
-  top: auto;
-  background-color: #303A40;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-}
-.custom-slider .ng5-slider .ng5-slider-pointer:after {
-  display: none;
-}
-.custom-slider .ng5-slider .ng5-slider-bubble {
-  bottom: 14px;
-}
-.custom-slider .ng5-slider .ng5-slider-limit {
-  font-weight: bold;
-  color: #e39255;
-}
-.custom-slider .ng5-slider .ng5-slider-tick {
-  width: 1px;
-  height: 17px;
-  margin-left: 4px;
-  border-radius: 0;
-  top: 1px;
-  background:#e39255;
-}
- .custom-slider .ng5-slider .ng5-slider-tick.ng5-slider-selected {
-    background: #303A40;
+// Common style for ngx-datatable
+.datatable-body-cell-label{
+    font-size: 0.5vw;
 }
 
-.bs-timepicker-field {
-    width: 60px !important;
+.datatable-body-cell-label span{
+    font-size: 0.5vw;
 }
-input.form-control, .btn-default{
-  border: 1px solid #e39255;;
-  border-radius: 4px;
+
+.ngx-datatable.material .datatable-footer .page-count {
+    line-height: unset;
+    height: unset; 
+    padding: 0 1.2rem;
+}
+
+.ngx-datatable.material.single-selection .datatable-body-row.active,
+.ngx-datatable.material.single-selection .datatable-body-row.active .datatable-row-group,
+.ngx-datatable.material.multi-selection .datatable-body-row.active,
+.ngx-datatable.material.multi-selection .datatable-body-row.active .datatable-row-group, .ngx-datatable.material.multi-click-selection .datatable-body-row.active,
+.ngx-datatable.material.multi-click-selection .datatable-body-row.active .datatable-row-group {
+    background-color:#f2f2f2 !important;
+    color: #fff;
+}
+
+.ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover .datatable-row-group
+{ 
+   background: #e39255 !important;
+    cursor: pointer;
+}
+
+.ngx-datatable.material .datatable-body .datatable-row-detail {
+    background: #f2f2f2;
 }
