--- a/client-ui/src/app/components/dashboard/dashboard.component.html
+++ b/client-ui/src/app/components/dashboard/dashboard.component.html
@@ -20,45 +20,46 @@
 
   <div class="container-fluid">
     <div class="row padding4">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+      <div class="col-md-12">
         <input type="text" class="search float-right" placeholder="Search..." (keyup)="updateFilter($event)" />
         <ngx-datatable #table class='table material expandable' [columnMode]="'force'" [headerHeight]="'auto'"
-          [footerHeight]="'auto'" [rowHeight]="'auto'" [scrollbarV]="false" [rows]='rows' [limit]=tablePageSize
-          [selectionType]="'single'">
-          <ngx-datatable-column name="frameworkName">
+          [footerHeight]="'auto'" [rowHeight]="'auto'" [scrollbarV]="false" [rows]="rows" [selectionType]="'single'"
+          (page)='setPage($event)' [externalPaging]="true" [count]="totalCount" [offset]="offset"
+          (select)="onSelect($event)">
+          <ngx-datatable-column name="Framework" [width]="10">
             <ng-template let-expanded="frameworkName" let-row="row" ngx-datatable-cell-template>
-              {{row.frameworkName}}
+              <img alt="{{row.frameworkName}}" src="{{getFrameworkImg(row.frameworkName)}}" width="50px"
+                height="26px" />
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="applicationName">
+          <ngx-datatable-column name="Application Name" [width]="350">
             <ng-template let-expanded="applicationName" let-row="row" ngx-datatable-cell-template>
               {{row.applicationName}}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="applicationId">
+          <ngx-datatable-column name="Application Id" [width]="10">
             <ng-template let-expanded="applicationId" let-row="row" ngx-datatable-cell-template>
               {{row.applicationId}}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="timestamp">
+          <ngx-datatable-column name="Execution Date" [width]="10">
             <ng-template let-expanded="timestamp" let-row="row" ngx-datatable-cell-template>
-              {{row.timestamp}}
+              {{row.timestamp | date:'dd/MM/yyyy, h:mm:ss a'}}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="datasource">
+          <ngx-datatable-column name="DataSource" [width]="400">
             <ng-template let-expanded="datasource" let-row="row" ngx-datatable-cell-template>
               {{row.datasource}}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="datasourceType">
+          <ngx-datatable-column name="DataSource Type" [width]="10">
             <ng-template let-expanded="datasourceType" let-row="row" ngx-datatable-cell-template>
               {{row.datasourceType}}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="writeMode">
-            <ng-template let-expanded="writeMode" let-row="row" ngx-datatable-cell-template>
-              {{row.writeMode}}
+          <ngx-datatable-column name="Append Mode" [width]="10">
+            <ng-template let-expanded="append" let-row="row" ngx-datatable-cell-template>
+              {{row.append}}
             </ng-template>
           </ngx-datatable-column>
 
@@ -66,6 +67,10 @@
           <ngx-datatable-footer>
             <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
               let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset" let-isVisible="isVisible">
+              <div style="padding: 5px 10px">
+                <div><strong>Jobs triggered</strong>: {{ rowCount }}</div>
+                <hr style="width:100%" />
+              </div>
               <datatable-pager [pagerLeftArrowIcon]="'datatable-icon-left'"
                 [pagerRightArrowIcon]="'datatable-icon-right'" [pagerPreviousIcon]="'datatable-icon-prev'"
                 [pagerNextIcon]="'datatable-icon-skip'" [page]="curPage" [size]="pageSize" [count]="rowCount"
@@ -76,7 +81,6 @@
 
         </ngx-datatable>
       </div>
-      <div class="col-md-1"></div>
     </div>
   </div>
 
